--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,32 @@ img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 
 /*! ______ОБНУЛЕНИЕ______ */
+
+$maxWidth: 1920;
+$maxWidthContainer: 1099;
+
+@mixin adaptiv-value($property, $startSize, $minSize, $type) {
+$addSize: $startSize - $minSize;
+@if $type==1 {
+// МЕНЬШЕ КОНТЕЙНЕРА
+#{$property}:$startSize + px;
+@media (max-width: #{$maxWidthContainer + px}) {
+#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidthContainer - 320}));
+}
+}
+@else if $type==2 {
+// БОЛЬШЕ КОНТЕЙНЕРА
+#{$property}:$startSize + px;
+@media (min-width: #{$maxWidthContainer + px}) {
+#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
+}
+}
+@else {
+//ВСЕГДА
+#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
+}
+}
+
 $colorq:#ffc600;
 
 %line{
@@ -55,13 +81,15 @@ body{
       background:transparent;
    }
    &__inner {
-      padding:114px 0px 0px 0px;
+      // padding:114px 0px 0px 0px;
+      @include adaptiv-value("padding-top", 114, 40, 0)
    }
 
    &__title {
       color: #ffffff;
       font-family: myriad-pro, sans-serif;
-      font-size: 202px;
+      // font-size: 202px;
+      @include adaptiv-value("font-size", 202, 100,0);
       font-weight: 700;
       font-style: normal;
       letter-spacing: -10px;
@@ -1236,3 +1264,6 @@ body{
 
 
 
+@media(max-widdth:991){
+
+}
