--- a/scss/style.scss
+++ b/scss/style.scss
@@ -187,7 +187,7 @@ body{
       span{
          color: $colorq;
          font-style: normal;
-         letter-spacing: -3px;
+         // letter-spacing: -3px;
          line-height: normal;
       }
    }
@@ -512,20 +512,22 @@ body{
    &__intro {
       display: flex;
       flex-wrap: wrap;
-      width: calc(100% + 2px);
+      width: calc(100% + 1px);
       position: relative;
-      left: -1px;
+      left: -0.5px;
+      // gap: .3px ;
    }
 
    &__photo {
       flex: 0 0 25%;
-      border: 1px solid #fff;
+      border: 0.5px solid #fff;
       &:nth-child(n+5) {
          border-bottom: none;
       }
       img{
          object-fit: cover;
          width: 100%;
+         height: 100%;
          
       }
    }
@@ -726,14 +728,15 @@ body{
       margin: 0px auto 149px auto;
       display: flex;
       justify-content:space-between;
-      flex-wrap: wrap;
       padding:0px 10px;
    }
 
    &__logo {
-      padding:0px 10px 0px 0px;
+      padding:0px 30px 0px 0px;
       margin: 85px 0px 0px 0px;
       font-size: 30px;
+      white-space: nowrap;
+
       span{
          font-size: 50px;
       }
@@ -962,13 +965,16 @@ body{
       }
 
    }
-
-
+   &__burger{
+      display: none;
+   }
    &__body {
       max-width: 758px;
       display: flex;
       position: relative;
-      right: -10px;
+      left: -10px;
+      width: calc(100% + 20px);
+
    }
 
    &__block {
@@ -1049,7 +1055,6 @@ body{
 
    &__form {
       max-width: 414px;
-      min-width: 300;
       position: relative;
       
 
@@ -1370,6 +1375,159 @@ body{
          display: flex;
       }
    }
+   .galery{
+      &__photo{
+         flex: 0 0 50%;
+      }
+   }
+   .blogs{
+      &__burger{
+         display: none;
+      }
+   }
+   
 
 
 }
+@media (max-width:768px){
+   .process{
+      &__body{
+         padding-top: 20px;
+      }
+      &__main{
+         margin: 30px 0px 10px 0px;
+      }
+      &__element{
+         width: 100%;
+
+         &:nth-child(1){
+            order:1;
+         }
+         &:nth-child(2){
+            order:2;
+         }
+         &:nth-child(3){
+            order:4;
+         }
+         &:nth-child(4){
+            order:3;
+         }
+         &:nth-child(5){
+            order:5;
+         }
+         &:nth-child(6){
+            order:6;
+         }
+         &--text{
+            padding: 0px;
+         }
+         
+         }
+      &__name{
+         padding: 20px 0px;
+      }
+      &__middle{
+         padding: 0px 0px 15px 0px;
+
+      }
+      &__foot{
+         padding: 0px 0px 20px 0px;
+
+         }
+
+
+      }
+      .services{
+         &__top{
+            padding: 30px 0px;
+         }
+         &__container{
+            margin: auto;
+            max-width: 400px;
+
+         }
+         &__block{
+            flex: 0 0 100%;
+            padding: 0px 0px 0px 0px;
+            margin: 0px 0px 20px 0px;
+            &:nth-child(2n+1){
+               padding:0px 0px 0px 0px;
+            }
+            &:last-child{
+               margin: 0px 0px;
+            }
+         }
+         &__title{
+            margin: 0px 0px 7px 0px;
+         }
+      }
+      .team{
+         &__inner{
+            margin: 0px 0px 20px 0px;
+            flex-wrap: wrap;
+
+         }
+         &__logo,&__body{
+            margin: 20px 0px 0px 0px;
+         }
+         &__top{
+            padding: 0px 50px 30px 0px;
+         }
+         &__block{
+            width: 50%;
+            padding: 0px 0px 20px 0px;
+         }
+      }
+   .testimonials{
+      &__logo{
+         margin: 30px 0px 0px 0px;
+      }
+      &__body{
+         justify-content: center;
+         margin: 40px 0px 30px 0px;
+         flex-wrap: wrap;
+
+      }
+      &__left{
+         order: 1;
+         max-width: 450px;
+      }
+      &__right{
+         margin: 0px 0px 30px 0px;
+
+      }
+   }
+   .blogs{
+      &__inner{
+         padding: 40px 10px 40px 10px;
+         flex-direction: column;
+      }
+      &__nav{
+         flex: 1;
+         margin: 0px 0px 20px 0px;
+         position: relative;
+      }
+      &__logo{
+         margin: 0px 0px 20px 0px;
+      }
+      &__links{
+         display: none;
+      }
+      &__burger{
+         position: absolute;
+         top: 50%;
+         right:20px;
+         display: flex;
+         
+         transform: translateY(-100%);
+      }
+      &__body{
+         flex-wrap: wrap;
+      }
+      &__block{
+         width: 50%;
+         padding-bottom: 20px;
+      }
+   }
+   }
+
