--- a/css/style.css
+++ b/css/style.css
@@ -278,11 +278,15 @@ body {
   height: 16%;
   background-color: #ffc600;
   border-radius: 2px;
+  -webkit-box-shadow: 0 0 3px #000, 0 0 3px #000;
+          box-shadow: 0 0 3px #000, 0 0 3px #000;
 }
 .logo__center::after {
   content: "";
   width: 100%;
   height: 16%;
+  -webkit-box-shadow: 0 0 3px #000, 0 0 3px #000;
+          box-shadow: 0 0 3px #000, 0 0 3px #000;
   background-color: #ffc600;
   position: absolute;
   bottom: 0px;
@@ -293,6 +297,8 @@ body {
   content: "";
   width: 100%;
   height: 16%;
+  -webkit-box-shadow: 0 0 3px #000, 0 0 3px #000;
+          box-shadow: 0 0 3px #000, 0 0 3px #000;
   background-color: #ffc600;
   position: absolute;
   top: 0px;
@@ -1064,6 +1070,7 @@ body {
 }
 .contact__form {
   max-width: 414px;
+  min-width: 360px;
   position: relative;
 }
 .contact__title {
@@ -1116,7 +1123,7 @@ body {
   margin: 0px 0px 15px 0px;
 }
 .contact__tap .tel {
-  width: 160px;
+  width: 40%;
   font-size: 16px;
   font-weight: 500;
   border: 2px solid #c5c5c5;
@@ -1140,7 +1147,7 @@ body {
   color: #ffffff;
 }
 .contact__tap .email {
-  width: 208px;
+  width: 50%;
   font-size: 16px;
   font-weight: 500;
   border: 2px solid #c5c5c5;
@@ -1394,8 +1401,19 @@ body {
 
 /*! ///---FOOTER---\\\ !*/
 @media (max-width: 990px) {
+  .logo__inner {
+    position: relative;
+  }
   .logo__nav {
-    display: none;
+    position: absolute;
+    top: 120px;
+    left: -100%;
+    gap: 20px;
+    text-shadow: 0 0 10px #000, 0 0 10px #000, 0 0 10px #000;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .logo__burger {
     display: -webkit-box;
@@ -1410,7 +1428,46 @@ body {
   .blogs__burger {
     display: none;
   }
+  .footer__inner {
+    position: relative;
+    margin: 0px 0px;
+  }
+  .footer__burger {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    top: 20px !important;
+    position: absolute;
+    left: 20px;
+    -webkit-transform: none !important;
+        -ms-transform: none !important;
+            transform: none !important;
+    z-index: 3;
+  }
+  .footer__left {
+    position: absolute;
+    top: 0;
+    left: -100%;
+    margin: 0px 0px;
+    background-color: #000;
+    min-width: 100%;
+    height: 100%;
+    z-index: 2;
+    overflow: auto;
+    padding: 0px 30px;
+  }
+  .footer__logo {
+    margin: 80px 0px 40px 0px;
+  }
+  .footer__right {
+    min-height: 100vh;
+    min-width: 100%;
+  }
+  .footer__name {
+    font-size: 50px !important;
+  }
 }
+/*! ///---990---\\\ !*/
 @media (max-width: 768px) {
   .process__body {
     padding-top: 20px;
@@ -1522,35 +1579,44 @@ body {
     margin: 0px 0px 30px 0px;
   }
   .blogs__inner {
-    padding: 40px 10px 40px 10px;
+    padding: 20px 10px 10px 10px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    position: relative;
   }
   .blogs__nav {
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
     margin: 0px 0px 20px 0px;
-    position: relative;
   }
   .blogs__logo {
     margin: 0px 0px 20px 0px;
   }
   .blogs__links {
-    display: none;
+    position: absolute;
+    top: 0;
+    z-index: 2;
+    text-align: right;
+    right: -100%;
+    background-color: rgb(255, 255, 255);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 90px 20px 0px 0px;
+    min-height: 100%;
+    min-width: 100%;
   }
   .blogs__burger {
     position: absolute;
-    top: 50%;
+    top: 50px;
     right: 20px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-transform: translateY(-100%);
-        -ms-transform: translateY(-100%);
-            transform: translateY(-100%);
+    z-index: 3;
   }
   .blogs__body {
     -ms-flex-wrap: wrap;
@@ -1559,5 +1625,20 @@ body {
   .blogs__block {
     width: 50%;
     padding-bottom: 20px;
+  }
+  .contact .container {
+    padding: 0px 0px;
+  }
+  .contact__inner {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .contact__form {
+    min-width: auto;
+    margin: 0px auto;
+  }
+  .contact__map {
+    display: none;
   }
 }
