--- a/css/style.css
+++ b/css/style.css
@@ -1455,6 +1455,12 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+  }
+  .logo ._active .logo__nav {
+    left: 10px;
   }
   .logo__burger {
     display: -webkit-box;
@@ -1490,6 +1496,16 @@ body {
     position: relative;
     margin: 0px 0px;
   }
+  .footer__inner::before {
+    content: "";
+    width: 100%;
+    height: 55px;
+    background-color: rgb(0, 0, 0);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+  }
   .footer__burger {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
@@ -1501,6 +1517,7 @@ body {
         -ms-transform: none !important;
             transform: none !important;
     z-index: 3;
+    cursor: pointer;
   }
   .footer__left {
     position: absolute;
@@ -1513,6 +1530,18 @@ body {
     z-index: 2;
     overflow: auto;
     padding: 0px 30px;
+    -webkit-transition: 0.4s;
+    -o-transition: 0.4s;
+    transition: 0.4s;
+  }
+  .footer__left::-webkit-scrollbar {
+    display: none;
+  }
+  .footer ._active .footer__left {
+    left: 0;
+  }
+  .footer__link {
+    font-size: 30px;
   }
   .footer__logo {
     margin: 80px 0px 40px 0px;
@@ -1669,15 +1698,31 @@ body {
     z-index: 2;
     text-align: right;
     right: -100%;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.812);
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     padding: 90px 20px 0px 0px;
     min-height: 100%;
     min-width: 100%;
+    -webkit-transition: 0.4s;
+    -o-transition: 0.4s;
+    transition: 0.4s;
+  }
+  .blogs ._active .blogs__links {
+    right: 0;
+  }
+  .blogs__link {
+    font-size: 25px !important;
+    margin: 0px 0px 40px 0px;
+    font-weight: 700;
   }
   .blogs__burger {
+    height: 15px;
+    width: 20px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     position: absolute;
     top: 50px;
     right: 20px;
@@ -1685,6 +1730,7 @@ body {
     display: -ms-flexbox;
     display: flex;
     z-index: 3;
+    cursor: pointer;
   }
   .blogs__body {
     -ms-flex-wrap: wrap;
