--- a/scss/style.scss
+++ b/scss/style.scss
@@ -205,34 +205,44 @@ body{
       position: relative;
    }
    &__center{
-      width: 100%;
-      height: 16%;
-      background-color: $colorq;
-      border-radius: 2px;
-      box-shadow: 0 0 3px #000,0 0 3px #000;
+      min-width: 100%;
+      min-height: 15px;
+      display: flex;
+      align-items: center;
+      span{
+         transition: .3s;
+         display: block;
+         width: 100%;
+         height: 2px;
+         background-color: $colorq;
+         border-radius: 2px;
+         box-shadow: 0 0 3px #000,0 0 3px #000;
+   }
+
 
       
 
       &::after{
          content: "";
          width: 100%;
-         height: 16%;
+         height: 2px;
          box-shadow: 0 0 3px #000,0 0 3px #000;
          background-color: $colorq;
          position: absolute;
          bottom: 0px;
          left: 0;
          border-radius: 2px;
+         transition: .3s;
+
 
 
       }
       &::before{
          content: "";
          width: 100%;
-         height: 16%;
+         height: 2px;
          box-shadow: 0 0 3px #000,0 0 3px #000;
-
-
+         transition: .3s;
          background-color: $colorq;
          position: absolute;
          top: 0px;
@@ -1404,6 +1414,20 @@ body{
          display: flex;
 
       }
+      ._active .logo__center{
+         span{
+            transform: scale(0);
+         }
+         &::before{
+            transform: rotate(45deg);
+            top: auto;
+
+         }
+         &::after{
+            transform: rotate(-45deg);
+            bottom: auto;
+         }
+      }
    }
    .about{
       &__top{
@@ -1482,6 +1506,21 @@ body{
       ._active .footer__left{
          left: 0;
       }
+      ._active .logo__center{
+         span{
+         transform: scale(0);
+
+         }
+         &::before{
+            transform: rotate(45deg);
+            top: auto;
+         }
+         &::after{
+            transform: rotate(-45deg);
+            bottom: auto;
+         }
+
+      }
       &__link{
          font-size: 30px;
       }
@@ -1502,6 +1541,7 @@ body{
 
 
 }
+
 //! ///---990---\\\ !\\
 
 /*! ///---990---\\\ !*/
@@ -1673,6 +1713,25 @@ body{
          
          // transform: translateY(-100%);
       }
+      
+
+      ._active .logo__center{
+         span{
+            transform: scale(0);
+         }
+         &::before{
+            transform: rotate(45deg);
+            top: auto;
+      
+         }
+         &::after{
+            transform: rotate(-45deg);
+            bottom: auto;
+         }
+      }
+
+
+
       &__body{
          flex-wrap: wrap;
       }
